--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,13 @@ jobs:
         python -m pip install --upgrade pip 
         pip install flake8==6.0.0 flake8-isort==6.0.0
     # Запускаем flake8
-    - name: Test with flake8
+    #- name: Test with flake8
       # Вызываем flake8 и указываем ему,
       # что нужно проверить файлы только в папке backend/
-      run: python -m flake8 backend/ 
+     # run: python -m flake8 backend/ 
+    #- name: Test with flake8 and django tests
+      # Команд стало больше одной; ставим символ | и пишем команды построчно
+      run: |
+        python -m flake8 backend/
+        cd backend/
+        python manage.py test
