--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
      # run: python -m flake8 backend/ 
     #- name: Test with flake8 and django tests
       # Команд стало больше одной; ставим символ | и пишем команды построчно
+    - name: Test with flake8 and django tests
       run: |
         python -m flake8 backend/
         cd backend/
