--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,21 +8,25 @@ on:
 
 jobs:
   tests:
-    # Разворачиваем окружение:
     runs-on: ubuntu-latest
 
     steps:
-    # Копируем код проекта
-    - name: Check out code
-      uses: actions/checkout@v3
-    # Устанавливаем Python с помощью action
+    - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
-    # В action setup-python@v4 передаём параметр - версию Python
       with:
         python-version: 3.9
-    # Команд стало больше одной; ставим символ | и пишем команды построчно
-    - name: Django tests
+
+    # Чтобы запустить тесты – нужно установить зависимости
+    - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip 
+        pip install flake8==6.0.0 flake8-isort==6.0.0
+        pip install -r ./backend/requirements.txt 
+    # Этот шаг дополним:
+    - name: Test with flake8 and django tests
+      # Команд стало больше одной; ставим символ | и пишем команды построчно
+      run: |
+        python -m flake8 backend/
         cd backend/
         python manage.py test
