--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         cd backend/
         python manage.py test
 # Добавляем новую задачу: деплой приложения
-build_and_push_to_docker_hub:
+  build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: tests
@@ -68,8 +68,8 @@ build_and_push_to_docker_hub:
         uses: docker/login-action@v2
         # При помощи with передаём в action параметры username и password
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: <ваш_username_dockerhub> 
+          password: <ваш_пароль_dockerhub>
           # Хорошо ли держать логин и пароль прямо в коде workflow?
           # Нет, это не хорошо.
       - name: Push to DockerHub
@@ -86,4 +86,5 @@ build_and_push_to_docker_hub:
           # Для каждого пересобранного образа 
           # устанавливаем тег latest, чтобы потом
           # на сервере и в docker-compose.yml не указывать версию
-          tags: ya0961/taski_backend:latest
+          tags: ваш-логин-на-docker-hub/taski_backend:latest     
+  
